Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012 Simon Josefsson
See the end for copying conditions.

Note that changes to the GNU SASL Library is documented in lib/NEWS.
This file track changes to the remaining, non-library, parts of GNU
SASL.  That include the manual, the command line tool, and self tests.

* Version 1.7.1 (unreleased) [alpha]

** gsasl: Ignore untagged responses during IMAP authentication.
Patch from Enrico Scholz <enrico.scholz@informatik.tu-chemnitz.de>.

** tests: Disable the test-poll self-test, it doesn't seem to work on Solaris.
Reported by Dagobert Michelsen <dam@opencsw.org>.

** libgsasl: Implement OPENID20 mechanism for OpenID authentication.
Following draft-ietf-kitten-sasl-openid-03.

** Demand gettext >= 0.18.1 in order to get newer M4 files.
The old M4 files associated with 0.17 caused problems on Solaris,
which will hopefully be fixed with this.  Reported by Dagobert
Michelsen <dam@opencsw.org>.

** build: Added MinGW build script for Windows binaries, windows/gsasl4win.mk.

** doc: Typo fix in autoconf snippet.

** i18n: Updated translations.

** examples: Added client-xmpp-saml20 and server-xmpp-saml20.
The examples illustrates a sample SAML20 client and server.

* Version 1.7.0 (released 2010-10-22) [alpha]

** Support for SAML20 mechanism as per -01 IETF draft.  See lib/NEWS.
Implements draft-ietf-kitten-sasl-saml-01.

** doc: Mention new SAML properties.

** tests: New tests/saml20.c file.

* Version 1.6.1 (released 2011-05-01) [stable]

** build: Demand gettext >= 0.18.1 in order to get newer M4 files.
The old M4 files associated with 0.17 caused problems on Solaris,
which will hopefully be fixed with this.  Reported by Dagobert
Michelsen <dam@opencsw.org>.

** doc: Typo fix in autoconf snippet.

** i18n: Updated translations.

* Version 1.6.0 (released 2010-12-14) [beta]

** No changes since release candidate 1.5.5.

* Version 1.5.5 (released 2010-12-09) [beta]
