@@ -21,7 +21,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --local-dir=gl/override --lib=libgl --source-base=gl --m4-base=gl/m4 --doc-base=doc --tests-base=gltests --aux-dir=lib/build-aux --with-tests --avoid=update-copyright-tests --no-conditional-dependencies --libtool --macro-prefix=gl --no-vc-files autobuild close connect error fdl-1.3 gendocs getaddrinfo getopt-gnu getpass maintainer-makefile manywarnings netdb netinet_in pmccabe2html poll progname quote readline recv shutdown socket striconv strtok_r sys_time unistd update-copyright valgrind-tests vasprintf version-etc warnings xalloc
+# Reproduce by: gnulib-tool --import --dir=. --local-dir=gl/override --lib=libgl --source-base=gl --m4-base=gl/m4 --doc-base=doc --tests-base=gltests --aux-dir=lib/build-aux --with-tests --avoid=update-copyright-tests --no-conditional-dependencies --libtool --macro-prefix=gl --no-vc-files autobuild close connect error fdl-1.3 gendocs getaddrinfo getopt-gnu getpass-gnu maintainer-makefile manywarnings netdb netinet_in pmccabe2html poll progname quote readline recv shutdown socket striconv strtok_r sys_time unistd update-copyright valgrind-tests vasprintf version-etc warnings xalloc
 
 AUTOMAKE_OPTIONS = 1.5 gnits subdir-objects
 
@@ -390,14 +390,14 @@ EXTRA_libgl_la_SOURCES += getopt.c getopt1.c
 
 ## end   gnulib module getopt-posix
 
-## begin gnulib module getpass
+## begin gnulib module getpass-gnu
 
 
 EXTRA_DIST += getpass.c getpass.h
 
 EXTRA_libgl_la_SOURCES += getpass.c
 
-## end   gnulib module getpass
+## end   gnulib module getpass-gnu
 
 ## begin gnulib module gettext-h
 
@@ -596,15 +596,6 @@ EXTRA_libgl_la_SOURCES += lseek.c
 EXTRA_DIST += $(top_srcdir)/maint.mk
 
 ## end   gnulib module maintainer-makefile
-
-## begin gnulib module malloc-posix
-
-
-EXTRA_DIST += malloc.c
-
-EXTRA_libgl_la_SOURCES += malloc.c
-
-## end   gnulib module malloc-posix
 
 ## begin gnulib module mbrtowc
 
@@ -1390,15 +1381,6 @@ MOSTLYCLEANFILES += stdlib.h stdlib.h-t
 EXTRA_DIST += stdlib.in.h
 
 ## end   gnulib module stdlib
-
-## begin gnulib module strdup-posix
-
-
-EXTRA_DIST += strdup.c
-
-EXTRA_libgl_la_SOURCES += strdup.c
-
-## end   gnulib module strdup-posix
 
 ## begin gnulib module streq
 
