@@ -8,6 +8,9 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.7.1 (unreleased) [alpha]
 
+** gsasl: Don't crash after getpass() on Mac OS X.
+Reported by Wim Lewis <wiml@hhhh.org>.
+
 ** gsasl: Ignore untagged responses during IMAP authentication.
 Patch from Enrico Scholz <enrico.scholz@informatik.tu-chemnitz.de>.
 
